# tauri-settings

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: docs.yml  npm_publish.yml  test_and_lint.yml
config/: jest.config.js  typedoc.js
docs/: index.html
docs/assets/: search.js
docs/assets/js/: search.js
docs/classes/: SettingsManager.html
docs/functions/: get.html  getAll.html  has.html  set.html
docs/interfaces/: IConfig.html
docs/modules/: CONSTANTS.html
docs/types/: ConfigOptions.html
docs/variables/: CONSTANTS.CONFIG_DEFAULTS.html
examples/tauri-app/: index.html  package.json  pnpm-lock.yaml
package/: .npmignore  package.json  pnpm-lock.yaml
package/config/: jest.config.js  tsconfig.json  typedoc.js
package/src/: index.ts
package/src/utils/: handlers.ts  (+1 more)
package/test/: dot-notation.test.js
plugin/: Cargo.toml  rustfmt.toml
plugin/src/: config.rs  dot_notation.rs  fs.rs  handlers.rs  lib.rs  settings.rs  test.rs
src/: config.rs  constants.ts  ensure-settings-file.ts  fs.rs  get-settings.ts  get.ts  handlers.rs  has.ts  index.ts  lib.rs  set.ts  settings-manager.ts
src/config/: config.ts
src/fs/: ensure-settings-file.ts  load-save.ts  save-settings.ts
src/plugin/: handlers.ts
src/settings/: get.ts  getter-setter.ts  has.ts  load-save.ts  set.ts  settings-manager.ts
src/settings-manager/: settings-manager.ts
src/types/: dot-notation.ts
src/utils/: config.ts  dot-notation.ts  handlers.ts
webview-src/: index.ts  tsconfig.json
webview-src/types/: dot-notation.ts
(+4 files in other folders)
