[package]
name = "tauri-plugin-settings"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.4.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0.99"
