[package]
name = "tauri-plugin-settings"
version = "1.0.0"
authors = [ "Harsh Khandeparkar" ]
keywords = [ "tauri", "tauri-plugin", "tauri-settings" ]
description = "A Tauri user settings manager plugin inspired by electron-settings."
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
license = "MIT"
license-file = "../LICENSE"

[dependencies]
tauri = { version = "1.4.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0.99"
