[package]
name = "tauri-plugin-settings"
version = "1.0.0"
authors = [ "Harsh Khandeparkar" ]
keywords = [ "tauri", "tauri-plugin", "tauri-settings" ]
description = "A Tauri user settings manager plugin inspired by electron-settings."
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
license-file = "../LICENSE"
readme = "../README.md"
homepage = "https://harshkhandeparkar.github.io/tauri-settings/rust/tauri_plugin_settings"

[dependencies]
tauri = { version = "1.4.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0.99"
